# semantic-router-from-scratch

./: .gitignore  CONCEPTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  dependencies.py  main.py  middleware.py  schemas.py
api/routers/: __init__.py  query.py  routes.py
examples/: async_router.py  customer_support_bot.py  multilingual_router.py  quickstart.py
semantic_router/: __init__.py  cache.py  calibration.py  config.py  exceptions.py  layer.py  match.py  route.py  utils.py
semantic_router/encoders/: __init__.py  base.py  cohere.py  openai.py  sentence_transformers.py
semantic_router/index/: __init__.py  local.py  pinecone.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cache.py  test_cache_coverage.py  test_calibration.py  test_calibration_coverage.py  test_config.py  test_config_coverage.py  test_encoder_base.py  test_index.py  test_index_coverage.py  test_layer.py  test_layer_coverage.py  test_route.py  test_route_coverage.py  test_sentence_transformers.py  test_utils.py  test_utils_coverage.py
